# python-mwsql

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  code_playground.ipynb  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-and-publish.yml  main.yml  release.yml  test.yml
data/: testfile-with-null-values.sql  testfile.sql
docs/: conf.py  examples.rst  index.rst  module-reference.rst
docs/source/: conf.py
mwsql/: __init__.py
src/mwsql/: __about__.py  __init__.py  about.py  dump.py  load.py  mwsql.py  parser.py  utils.py
tests/: helpers.py  test_dump.py  test_parser.py  test_utils.py
